static/style.css
/* CSS variables */
:root {
  --color-bg: #fff;
  --color-footer: #aaa;
  --color-text-main: #000;
  --wrapper-height: 85vh;
  --font-family: "HK Grotesk";

  --accent-1: #52A5E9;
  --accent-2: #A99DFF;
  --accent-3: #FFA7CC;
  --accent-4: #FFB85E;
}

/* Reset */
* {
  box-sizing: border-box;
}
[hidden] {
  display: none !important;
}

/* Fonts */
@font-face {
  font-family: HK Grotesk;
  src: url("fonts/HKGrotesk-Regular.otf") format("opentype");
}
@font-face {
  font-family: HK Grotesk;
  font-weight: bold;
  src: url("fonts/HKGrotesk-Bold.otf") format("opentype");
}

/* Page structure */
html, body {
  font-family: var(--font-family);
  background-color: var(--color-bg);
  margin: 0;
  padding: 0;
}
.wrapper {
  min-height: var(--wrapper-height);
  margin: 0;
  padding: 1rem 2rem;
}
.content {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  max-width: 600px;
}

/* Navigation */
header {
  display: flex;
  justify-content: space-evenly;
  margin: 0 auto 1rem;
  width: 100%;
  flex-wrap: wrap;
  border-bottom: 3px solid;
  border-image: linear-gradient(45deg, var(--accent-1) 10%, var(--accent-2), var(--accent-3), var(--accent-4) 90%) 1;
}
header a {
  font-size: 1.1rem;
  border-bottom: none !important;
  padding: 0 0.5rem 0.5rem;
}
header a.active {
  color: var(--color-text-main);
}

/* Typography */
p {
  margin: 0 0 1rem 0;
  line-height: 1.5;
  font-size: 1rem;
}
h1, h2, h3, h4, h5 {
  margin: 1.5rem 0 .8rem;
  font-family: var(--font-family);
  font-weight: 600;
  line-height: 1.1;
  color: var(--color-text-main);
}
td > h4 {
  margin-top: 0;
}
h1.title {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 3rem;
  flex-basis: min-content;
  background: linear-gradient(45deg, var(--accent-1) 10%, var(--accent-2), var(--accent-3), var(--accent-4) 90%);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}
h1 {
  font-size: 2rem;
  background: -webkit-linear-gradient(45deg, var(--accent-4), var(--accent-3));
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  width: fit-content;
}
h2 {
  font-size: 2rem;
  color: var(--accent-1);
}
h3 {
  font-size: 1.5rem;
  color: var(--accent-2);
}
h4 {
  font-size: 1.25rem;
}
small,
.text_small {
  font-size: 0.8rem;
}
ul > li,
ol > li {
  margin-bottom: 0.75rem;
  line-height: 1.5;
  font-size: 1rem;
}
ul {
  padding: 0 0 0 18px;
  margin: 0;
}

/* Links */
a:link,
a:visited {
  text-decoration: none;
  border-bottom: 2px solid var(--accent-1);
  color: var(--accent-1);
  transition: background 0.2s linear;
}
a:hover {
  color: var(--color-bg) !important;
  background: var(--accent-1);
  -webkit-background-clip: unset !important;
  -webkit-text-fill-color: var(--color-bg) !important;
}

/* Home layout */
.illo-container {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-between;
  align-items: center;
  margin: 0;
}
.illustration {
  max-width: 8rem;
  object-fit: contain;
}

/* Post */
.postTitle {
  font-size: 4rem;
  color: #000;
  line-height: 1.1;
  margin-bottom: 2rem;
}
.controls {
  margin: 3rem 0 2rem;
}

td {
  vertical-align: top;
}

/* Figures */
.figure {
  color: #888;
  font-size: 0.8rem;
  width: 300px;
  padding-bottom: 2rem;
}
.figure img {
  width: 100%;
}

blockquote {
  margin-bottom: 0;
}

footer {
  margin: 0 auto;
  padding: 0 2rem;
  color: var(--color-footer);
  font-size: 0.7rem;
}

